<resources>
    <string name="app_name">CS4530_MobileApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="first_name">First Name</string>
    <string name="submit">Submit</string>
    <string name="last_name">Last Name</string>
    <string name="take_a_picture">Picture</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="amount_of_exercise">Amount of Exercise</string>
    <string name="sex">Sex</string>
    <string name="heavy">Heavy</string>
    <string name="moderate">Moderate</string>
    <string name="light">Light</string>
    <string name="name_first_and_last">Name (first and last)</string>
    <string name="i_e_mickey_mouse">i.e. Mickey Mouse</string>
    <string name="age_in_years">Age (in years)</string>
    <string name="weight_in_pounds">Weight (in pounds)</string>
    <string name="height_in_inches">Height (in inches)</string>
    <string name="home">Home</string>
    <string name="back">Back</string>
    <string name="currtemp">Current Temperature:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>