<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_pic"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="266dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="2dp"
        android:text="@string/take_a_picture" />

    <ImageView
        android:id="@+id/iv_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="252dp"
        android:layout_toLeftOf="@id/button_pic" />

    <LinearLayout
        android:id="@+id/ll_info"
        android:layout_width="385dp"
        android:layout_height="377dp"
        android:layout_below="@+id/button_pic"
        android:layout_centerInParent="true"
        android:layout_marginTop="-63dp"
        android:orientation="vertical"
        android:padding="5dp"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_weight="1"
            android:text="@string/name_first_and_last" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="223dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/i_e_mickey_mouse" />

        <TextView
            android:id="@+id/tv_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:text="@string/age_in_years" />

        <TextView
            android:id="@+id/tv_age_curr_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="18" />

        <SeekBar
            android:id="@+id/sb_age"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_weight="2"
            android:inputType="number"
            android:max="100"
            android:progress="18" />


        <TextView
            android:id="@+id/tv_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/weight_in_pounds" />

        <TextView
            android:id="@+id/tv_weight_curr_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="200" />

        <SeekBar
            android:id="@+id/sb_weight"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_weight="2"
            android:inputType="number"
            android:max="400"
            android:progress="200" />

        <TextView
            android:id="@+id/tv_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/height_in_inches" />

        <TextView
            android:id="@+id/tv_height_curr_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="70" />

        <SeekBar
            android:id="@+id/sb_height"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_weight="2"
            android:inputType="number"
            android:max="100"
            android:progress="70" />

        <TextView
            android:id="@+id/tv_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sex" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal">


            <RadioButton
                android:id="@+id/rb_male"
                android:layout_width="74dp"
                android:layout_height="wrap_content"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/rb_female"
                android:layout_width="89dp"
                android:layout_height="wrap_content"
                android:text="@string/female" />
        </RadioGroup>

        <TextView
            android:id="@+id/tv_xercise_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/amount_of_exercise" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal">


            <RadioButton
                android:id="@+id/rb_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/light" />

            <RadioButton
                android:id="@+id/rb_moderate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/moderate" />

            <RadioButton
                android:id="@+id/rb_heavy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/heavy" />
        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_info"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/submit" />

    <Button
        android:id = "@+id/button_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button_submit"
        android:layout_marginTop="5dp"
        android:text="@string/home" />

</RelativeLayout>